render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__per_side_dashed_stroke_skips_zero_width_sides.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="180" viewBox="0 0 240 180">
	<path fill="#1040FF" d="M0 0L26.666668 0L26.666668 16L0 16M53.333336 0L80 0L80 16L53.333336 16M106.66667 0L133.33334 0L133.33334 16L106.66667 16M160 0L186.66667 0L186.66667 16L160 16M213.33334 0L240 0L240 16L213.33334 16M240 180L213.33333 180L213.33333 164L240 164M186.66666 180L160 180L160 164L186.66666 164M133.33333 180L106.66666 180L106.66666 164L133.33333 164M80 180L53.333328 180L53.333328 164L80 164M26.666656 180L0 180L0 164L26.666656 164"/>
</svg>
