render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__skips_hidden_shadows.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="80" viewBox="0 0 100 80">
	<rect fill="red" width="100" height="80"/>
</svg>
